<resources>
    <string name="app_name">Remember</string>
    <string name="preferencesName">My Preferences</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="title_activity_flashcards">Flashcards</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_decks">DecksActivity</string>
    <string name="create_a_new_deck">Create a new deck</string>
    <string name="create_deck">Create deck</string>
    <string name="deck_size">Deck size</string>
    <string name="deck_name">Deck name</string>
    <string name="front_card_transition">front_card_transition</string>
    <string name="back_card_transition">back_card_transition</string>
    <string name="frontET_transition">front_ET_transition</string>
    <string name="backET_transition">back_ET_transition</string>
</resources>
