<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_edit_view_front"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.5"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        android:transitionName="@string/front_card_transition">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageEditViewFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/cardFrontEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:textAlignment="center"
            android:transitionName="@string/frontET_transition"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_edit_view_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        card_view:cardBackgroundColor="@color/colorPrimary"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        android:transitionName="@string/back_card_transition">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageEditViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/cardBackEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/skip"
            android:textAlignment="center"
            android:transitionName="@string/backET_transition"/>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>